// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CollectionCard should render correctly - no data 1`] = `
<DocumentFragment>
  <div
    class="pf-v5-c-card"
    data-ouia-component-id="collection-card"
    data-ouia-component-type="PF5/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-v5-c-card__body"
    >
      <div
        class="pf-v5-l-stack pf-m-gutter"
      >
        <div
          class="pf-v5-l-stack__item"
        >
          <div
            class="pf-v5-c-content"
          >
            <h1
              class=""
              data-ouia-component-id="SystemPropertiesCardTitle"
              data-ouia-component-type="PF5/Text"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              Collection information
            </h1>
          </div>
        </div>
        <div
          class="pf-v5-l-stack__item pf-m-fill"
        >
          <div
            class="pf-v5-c-content"
          >
            <dl
              class=""
            >
              <dt
                aria-label="Insights client title"
                class=""
                data-ouia-component-id="Insights client title"
              >
                Insights client
              </dt>
              <dd
                aria-label="Insights client value"
                class=""
                data-ouia-component-id="Insights client value"
              >
                <div
                  class="pf-v5-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
                >
                  <span
                    class="pf-v5-screen-reader"
                  />
                </div>
              </dd>
              <dt
                aria-label="Last check-in title"
                class=""
                data-ouia-component-id="Last check-in title"
              >
                Last check-in
              </dt>
              <dd
                aria-label="Last check-in value"
                class=""
                data-ouia-component-id="Last check-in value"
              >
                <div
                  class="pf-v5-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
                >
                  <span
                    class="pf-v5-screen-reader"
                  />
                </div>
              </dd>
              <dt
                aria-label="Registered title"
                class=""
                data-ouia-component-id="Registered title"
              >
                Registered
              </dt>
              <dd
                aria-label="Registered value"
                class=""
                data-ouia-component-id="Registered value"
              >
                <div
                  class="pf-v5-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
                >
                  <span
                    class="pf-v5-screen-reader"
                  />
                </div>
              </dd>
              <dt
                aria-label="Insights id title"
                class=""
                data-ouia-component-id="Insights id title"
              >
                Insights id
              </dt>
              <dd
                aria-label="Insights id value"
                class=""
                data-ouia-component-id="Insights id value"
              >
                <div
                  class="pf-v5-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
                >
                  <span
                    class="pf-v5-screen-reader"
                  />
                </div>
              </dd>
              <dt
                aria-label="Reporter title"
                class=""
                data-ouia-component-id="Reporter title"
              >
                Reporter
              </dt>
              <dd
                aria-label="Reporter value"
                class=""
                data-ouia-component-id="Reporter value"
              >
                <div
                  class="pf-v5-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
                >
                  <span
                    class="pf-v5-screen-reader"
                  />
                </div>
              </dd>
            </dl>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CollectionCard should render correctly with data 1`] = `
<DocumentFragment>
  <div
    class="pf-v5-c-card"
    data-ouia-component-id="collection-card"
    data-ouia-component-type="PF5/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-v5-c-card__body"
    >
      <div
        class="pf-v5-l-stack pf-m-gutter"
      >
        <div
          class="pf-v5-l-stack__item"
        >
          <div
            class="pf-v5-c-content"
          >
            <h1
              class=""
              data-ouia-component-id="SystemPropertiesCardTitle"
              data-ouia-component-type="PF5/Text"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              Collection information
            </h1>
          </div>
        </div>
        <div
          class="pf-v5-l-stack__item pf-m-fill"
        >
          <div
            class="pf-v5-c-content"
          >
            <dl
              class=""
            >
              <dt
                aria-label="Insights client title"
                class=""
                data-ouia-component-id="Insights client title"
              >
                Insights client
              </dt>
              <dd
                aria-label="Insights client value"
                class=""
                data-ouia-component-id="Insights client value"
              >
                <div
                  style="display: contents;"
                >
                  <span>
                    test-client
                  </span>
                </div>
              </dd>
              <dt
                aria-label="Last check-in title"
                class=""
                data-ouia-component-id="Last check-in title"
              >
                Last check-in
              </dt>
              <dd
                aria-label="Last check-in value"
                class=""
                data-ouia-component-id="Last check-in value"
              >
                01 Jun 2014
              </dd>
              <dt
                aria-label="Registered title"
                class=""
                data-ouia-component-id="Registered title"
              >
                Registered
              </dt>
              <dd
                aria-label="Registered value"
                class=""
                data-ouia-component-id="Registered value"
              >
                01 Apr 2014
              </dd>
              <dt
                aria-label="Insights id title"
                class=""
                data-ouia-component-id="Insights id title"
              >
                Insights id
              </dt>
              <dd
                aria-label="Insights id value"
                class=""
                data-ouia-component-id="Insights id value"
              >
                Not available
              </dd>
              <dt
                aria-label="Reporter title"
                class=""
                data-ouia-component-id="Reporter title"
              >
                Reporter
              </dt>
              <dd
                aria-label="Reporter value"
                class=""
                data-ouia-component-id="Reporter value"
              >
                Not available
              </dd>
            </dl>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CollectionCard should render extra 1`] = `
<DocumentFragment>
  <div
    class="pf-v5-c-card"
    data-ouia-component-id="collection-card"
    data-ouia-component-type="PF5/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-v5-c-card__body"
    >
      <div
        class="pf-v5-l-stack pf-m-gutter"
      >
        <div
          class="pf-v5-l-stack__item"
        >
          <div
            class="pf-v5-c-content"
          >
            <h1
              class=""
              data-ouia-component-id="SystemPropertiesCardTitle"
              data-ouia-component-type="PF5/Text"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              Collection information
            </h1>
          </div>
        </div>
        <div
          class="pf-v5-l-stack__item pf-m-fill"
        >
          <div
            class="pf-v5-c-content"
          >
            <dl
              class=""
            >
              <dt
                aria-label="Insights client title"
                class=""
                data-ouia-component-id="Insights client title"
              >
                Insights client
              </dt>
              <dd
                aria-label="Insights client value"
                class=""
                data-ouia-component-id="Insights client value"
              >
                <div
                  style="display: contents;"
                >
                  <span>
                    test-client
                  </span>
                </div>
              </dd>
              <dt
                aria-label="Last check-in title"
                class=""
                data-ouia-component-id="Last check-in title"
              >
                Last check-in
              </dt>
              <dd
                aria-label="Last check-in value"
                class=""
                data-ouia-component-id="Last check-in value"
              >
                01 Jun 2014
              </dd>
              <dt
                aria-label="Registered title"
                class=""
                data-ouia-component-id="Registered title"
              >
                Registered
              </dt>
              <dd
                aria-label="Registered value"
                class=""
                data-ouia-component-id="Registered value"
              >
                01 Apr 2014
              </dd>
              <dt
                aria-label="Insights id title"
                class=""
                data-ouia-component-id="Insights id title"
              >
                Insights id
              </dt>
              <dd
                aria-label="Insights id value"
                class=""
                data-ouia-component-id="Insights id value"
              >
                Not available
              </dd>
              <dt
                aria-label="Reporter title"
                class=""
                data-ouia-component-id="Reporter title"
              >
                Reporter
              </dt>
              <dd
                aria-label="Reporter value"
                class=""
                data-ouia-component-id="Reporter value"
              >
                Not available
              </dd>
              <dt
                aria-label="something title"
                class=""
                data-ouia-component-id="something title"
              >
                something
              </dt>
              <dd
                aria-label="something value"
                class=""
                data-ouia-component-id="something value"
              >
                test
              </dd>
              <dt
                aria-label="with click title"
                class=""
                data-ouia-component-id="with click title"
              >
                with click
              </dt>
              <dd
                aria-label="with click value"
                class=""
                data-ouia-component-id="with click value"
              >
                <div>
                  <a
                    href="//undefined"
                  >
                    1 tests
                  </a>
                </div>
              </dd>
            </dl>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
